style: correct align

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ a:hover{
     padding: 40px 15px;
     gap: 20px 0;
     background-color: #00000091;
+    align-items: center;
 }
 
 ul{
